force-app/main/default/objects/Status__c/Status__c.object-meta.xml
<CustomObject>
    <label>Status</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>