force-app/main/default/objects/Status__c/fields/Expiry_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Expiry_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry DateTime</label>
    <type>DateTime</type>
</CustomField>