force-app/main/default/objects/Status__c/fields/Issue_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Issue_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issue DateTime</label>
    <type>DateTime</type>
</CustomField>