force-app/main/default/objects/Status__c/fields/Patron_Id__c.field-meta.xml
<CustomField>
    <fullName>Patron_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Patron Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>