force-app/main/default/objects/Status__c/fields/Sub_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>